[tool.poetry]
name = "airnow-pm-forecast"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kawcco@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
matplotlib = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
